<resources>
    <string name="app_name">JobCompare6300</string>
    <string name="title_activity_enter_current_job_details">enterCurrentJobDetails</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="job_offer_comparison">Job Offer Comparison</string>

    <!--    Enter Current Job Details-->
    <string name="enter_current_job_details_screen">Enter Current Job Details Screen</string>
    <string name="enter_current_job_details">Enter Current Job Details</string>

    <!--    Edit Current Job Details-->
    <string name="edit_current_job_details_screen">Edit Current Job Details Screen</string>
    <string name="edit_current_job_details">Edit Current Job Details</string>

    <!--    Enter Job Offers-->
    <string name="enter_job_offers_screen">Enter Job Offer Details Screen</string>
    <string name="enter_job_offers">Enter Job Offer Detail</string>

    <!--    Compare Job Offers-->
    <string name="compare_job_offers">Compare Job Offers</string>
    <string name="compare_job_offers_screen">Job Offers Ranking</string>


    <string name="adjust_the_comparison_settings">Adjust the Comparison Settings</string>

    <string name="back_to_main_menu">Back to Main Menu</string>
    <string name="save_current_job">Save Current Job</string>
    <string name="cost_of_living_index">Cost of Living Index</string>
    <string name="yearly_salary">Yearly Salary</string>
    <string name="yearly_bonus">Yearly Bonus</string>
    <string name="training_dev_fund"><![CDATA[Training & Dev Fund]]></string>
    <string name="leave_time_day_per_year">Leave Time (Day per Year)</string>
    <string name="cost_of_living">Cost of Living</string>
    <string name="location">Location</string>
    <string name="title">Title</string>
    <string name="save_job_offer">Save Job Offer</string>
    <string name="update_current_job">Update Current Job</string>
    <string name="telework_day_per_week">Telework Day per Week</string>
    <string name="save_comparison_settings">Save Weights</string>
    <string name="compare_another_offer">Compare Another Offer</string>
    <string name="compare_saved_offer">Compare Saved Offer</string>
</resources>